fix alignment of timestamp and title in post listings

--- a/site/css/components/post-index.css
+++ b/site/css/components/post-index.css
@@ -13,7 +13,7 @@
     display: grid;
     grid-template-columns: auto 1fr;
     grid-gap: var(--s0);
-    align-items: flex-start;
+    align-items: baseline;
 }
 
 .post-listing > * + * {
